--- a/templates/shared/base_list.html
+++ b/templates/shared/base_list.html
@@ -4,15 +4,15 @@
 
 {% block content %}
     {# header area #}
-    <div class="d-flex flex-column flex-sm-row justify-content-between align-items-start align-items-sm-center mb-3 gap-2">
+    <div class="d-flex justify-content-between align-items-center mb-3 gap-2">
         <h1 class="h3 m-0">{% block list_title %}{{ title_plural }}{% endblock %}</h1>
         {% block create_button %}
-            <a class="btn btn-primary" href="{% block create_url %}{% endblock %}">
+            <a class="btn btn-primary text-nowrap" href="{% block create_url %}{% endblock %}">
                 {% block create_label %}
                     {% if title_singular %}
-                        Neuen {{ title_singular }} anlegen
+                        <i class="bi bi-plus-lg me-1"></i> {{ title_singular }}
                     {% else %}
-                        Neu anlegen
+                        <i class="bi bi-plus-lg me-1"></i> Neu
                     {% endif %}
                 {% endblock %}
             </a>
