--- a/templates/participants/participants_list.html
+++ b/templates/participants/participants_list.html
@@ -30,8 +30,9 @@
 
 {% endblock %}
 
-{# Participants sollen hier nur angezeigt werden -> kein Create #}
-{% block create_url %}{% endblock %}
+{% block create_url %}
+    {% url 'participant_create_no_ticket' %}?event={{ request.GET.event }}
+{% endblock %}
 
 {% block list_item_content %}
     <div class="d-flex flex-column position-static col-12 col-md-8">
@@ -70,7 +71,8 @@
         {% endif %}
     </div>
 
-    <div class="col-12 col-md-4 d-flex justify-content-md-end align-items-start mt-3 mt-md-0" style="position: relative; z-index: 2;">
+    <div class="col-12 col-md-4 d-flex justify-content-md-end align-items-start mt-3 mt-md-0"
+         style="position: relative; z-index: 2;">
         {% if item.paid_at %}
             <span class="badge rounded-pill text-bg-success d-flex align-items-center">
                 <i class="bi bi-check-circle-fill me-1"></i> Bezahlt
